--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
-    "tauri:build": "tauri build"
+"tauri:build": "tauri build",
+    "icons": "node scripts/icons-from-svg.mjs && tauri icon src-tauri/icons/icon-1024.png"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.0.0",
@@ -21,6 +22,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "sharp": "^0.34.5",
     "typescript": "~5.6.2",
     "vite": "^5.4.10"
   }
