--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview",
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
-"tauri:build": "tauri build",
+    "tauri:build": "tauri build",
     "icons": "node scripts/icons-from-svg.mjs && tauri icon src-tauri/icons/icon-1024.png"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-notification": "^2.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
