--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,11 +14,12 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
+tauri = { version = "2", features = ["tray-icon"] }
+tauri-plugin-notification = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 reqwest = { version = "0.12", features = ["stream", "json"] }
-tokio = { version = "1", features = ["fs", "io-util", "sync", "rt-multi-thread"] }
+tokio = { version = "1", features = ["fs", "io-util", "sync", "rt-multi-thread", "net"] }
 uuid = { version = "1", features = ["v4", "serde"] }
 thiserror = "1"
 bytes = "1"
