--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,8 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = ["tray-icon"] }
 tauri-plugin-notification = "2"
+tauri-plugin-dialog = "2"
+tauri-plugin-fs = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 reqwest = { version = "0.12", features = ["stream", "json"] }
@@ -27,6 +29,10 @@ urlencoding = "2"
 futures-util = "0.3"
 arboard = "3"
 opener = "0.7"
+winreg = "0.52"  # 用于Windows注册表操作
+dirs = "5"       # 用于获取用户主目录
+zip = "0.6"      # 用于打包扩展为zip文件
+walkdir = "2"    # 用于遍历目录
 
 [features]
 default = ["custom-protocol"]
