--- a/integration/extension/manifest.json
+++ b/integration/extension/manifest.json
@@ -3,8 +3,12 @@
   "name": "Multidown 下载助手",
   "version": "0.1.0",
   "description": "使用 Multidown 下载链接与文件",
-  "permissions": ["contextMenus", "nativeMessaging"],
+  "permissions": ["contextMenus", "nativeMessaging", "storage"],
   "background": {
     "service_worker": "background.js"
+  },
+  "action": {
+    "default_title": "Multidown 下载助手",
+    "default_popup": "popup.html"
   }
 }
