--- a/integration/native-host/Cargo.toml
+++ b/integration/native-host/Cargo.toml
@@ -9,4 +9,6 @@ name = "multidown-native-host"
 path = "src/main.rs"
 
 [dependencies]
+serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+chrono = "0.4"
