--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,7 +21,7 @@ tauri-plugin-fs = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 reqwest = { version = "0.12", features = ["stream", "json"] }
-tokio = { version = "1", features = ["fs", "io-util", "sync", "rt-multi-thread", "net"] }
+tokio = { version = "1", features = ["fs", "io-util", "sync", "rt-multi-thread", "net", "macros", "time"] }
 uuid = { version = "1", features = ["v4", "serde"] }
 thiserror = "1"
 bytes = "1"
@@ -29,11 +29,13 @@ urlencoding = "2"
 futures-util = "0.3"
 arboard = "3"
 opener = "0.7"
-winreg = "0.52"  # 用于Windows注册表操作
-dirs = "5"       # 用于获取用户主目录
-zip = "0.6"      # 用于打包扩展为zip文件
-walkdir = "2"    # 用于遍历目录
-chrono = "0.4"   # 用于日志时间戳
+dirs = "5"
+zip = "0.6"
+walkdir = "2"
+chrono = "0.4"
+
+[target.'cfg(windows)'.dependencies]
+winreg = "0.52"
 
 [features]
 default = ["custom-protocol"]
